# saamge

./: BUILD.README  LICENSE  README  genctags.sh  runglvis.sh
amg/: CMakeLists.txt  Doxyfile  Makefile  sample_config.sh
amg/cmake/modules/: CMakeUtilities.cmake  FindSuiteSparse.cmake
amg/data/: anisotropic.mat.00000
amg/data/meshes/: cube474.mesh3d
amg/inc/: AnisotropicDiffusionIntegrator.hpp  DoubleCycle.hpp  InversePermeabilityFunction.hpp  LSHelmholtzProblem.hpp  SecondOrderEllipticIntegrator.hpp  SharedEntityCommunication.hpp  adapt.hpp  aggregates.hpp  arbitrator.hpp  arpacks.hpp  common.hpp  config.hpp  config_mgr.hpp  contrib.hpp  elmat.hpp  fem.hpp  helpers.hpp  interp.hpp  levels.hpp  mbox.hpp  mfem_addons.hpp  ml.hpp  mortar.hpp  nonconf.hpp  part.hpp  process.hpp  saamge.hpp  saamge_config.h.in  saamgealgpc.hpp  saamgepc.hpp  smpr.hpp  solve.hpp  spectral.hpp  tg.hpp  tg_data.hpp  xpacks.hpp
amg/lib/saamge/: Makefile
amg/lib/saamge/inc/: DoubleCycle.hpp  InversePermeabilityFunction.hpp  SharedEntityCommunication.hpp  adapt.hpp  aggregates.hpp  common.hpp  config.hpp  config_mgr.hpp  contrib.hpp  elmat.hpp  fem.hpp  helpers.hpp  interp.hpp  mbox.hpp  mfem_addons.hpp  ml.hpp  part.hpp  process.hpp  saamge.hpp  smpr.hpp  solve.hpp  spectral.hpp  tg.hpp  xpacks.hpp
amg/lib/saamge/src/: DoubleCycle.cpp  InversePermeabilityFunction.cpp  Makefile  SharedEntityCommunication.cpp  adapt.cpp  aggregates.cpp  arbitrator.cpp  config.cpp  contrib.cpp  elmat.cpp  fem.cpp  helpers.cpp  interp.cpp  mbox.cpp  mfem_addons.cpp  ml.cpp  part.cpp  process.cpp  smpr.cpp  solve.cpp  spectral.cpp  tg.cpp  xpacks.cpp
amg/mk/: common.mk  common_srcs.mk  deps.mk
amg/src/: AnisotropicDiffusionIntegrator.cpp  CMakeLists.txt  DoubleCycle.cpp  InversePermeabilityFunction.cpp  LSHelmholtzProblem.cpp  SecondOrderEllipticIntegrator.cpp  SharedEntityCommunication.cpp  adapt.cpp  aggregates.cpp  arbitrator.cpp  arpacks.cpp  config.cpp  contrib.cpp  elmat.cpp  fem.cpp  helpers.cpp  interp.cpp  mbox.cpp  mfem_addons.cpp  ml.cpp  mortar.cpp  nonconf.cpp  part.cpp  process.cpp  saamgealgpc.cpp  saamgepc.cpp  smpr.cpp  solve.cpp  spectral.cpp  tg.cpp  xpacks.cpp
amg/test/: CMakeLists.txt  Makefile  mltest.mesh
amg/test/algebraic/: algebraic.cpp
amg/test/basicupscale/: basicupscale.cpp  basicupscale.sh
amg/test/encapsulate/: elasticity.sh  encapsulate.cpp
amg/test/leastsquarealgebraictest/: leastsquarealgebraictest.cpp
amg/test/leastsquaretest/: leastsquaretest.cpp
amg/test/mltest/: Makefile  maketable.py  mlparse.py  mltest.cpp  readlog.py
amg/test/nonconf/: interior_penalty.cpp  interior_penalty_saamge.cpp  interior_penalty_tg.cpp  mortar.cpp  mortar_saamge.cpp  mortar_tg.cpp  tg.cpp
amg/test/partialsmooth/: partialsmooth.cpp  partialsmooth.sh
amg/test/parttest/: parttest.cpp
amg/test/phyagg/: phyagg.cpp
amg/test/secondorderpdealgebraictest/: secondorderpdealgebraictest.cpp
amg/test/secondorderpdetest/: secondorderpdetest.cpp
amg/test/spe10/: InversePermeabilityFunction.cpp  InversePermeabilityFunction.hpp  Makefile  run.sh  spe10.cpp
amg/test/startfromcoarse/: readjson.py  startfromcoarse.cpp
amg/test/tgparallel/: Makefile  tgparallel.cpp
